dnl Process this file with autoconf to produce a configure script.
define([TIDNOTIFC_VERSION], patsubst(esyscmd(cat VERSION | awk '{print $1}'), [
]))

AC_INIT([TIDNotifC], 
        TIDNOTIFC_VERSION, 
        [tidnotifc-bugs@lists.morfeo-project.org],
        [TIDNotifC])
AC_CONFIG_SRCDIR(source/FilterImpl.C)
AM_INIT_AUTOMAKE([-Wall foreign 1.9 tar-ustar]) 

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC
dnl AC_PROG_RANLIB
AC_PROG_LIBTOOL

AC_CONFIG_MACRO_DIR([m4])

dnl Check for C++ compiler version
TID_CPP_VERSION(3.4.0)

dnl Check for Java Runtime Machine
TID_JRE(1.4.0)

dnl Check for TID IDL compiler.
TID_PROG_TIDIDLC(1.2.2)

dnl Check for Doxygen documentation generator.
TID_DOXYGEN

dnl Read configure arguments to set ENABLE_DEBUG compiling macro.
TIDNOTIFC_ENABLE_DEBUG

dnl Checks for libraries.
TID_LIB_TIDORBC

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h stdio.h stdlib.h list map iostream)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
dnl AC_CHECK_FUNCS()

AC_OUTPUT(
	Makefile 
	source/Makefile 
	source/idl/Makefile
	source/file/Makefile
	source/qos/Makefile
	source/util/Makefile 
	source/util/parser/Makefile
	test/Makefile
	test/grammar/Makefile
	test/event_push/Makefile
	test/notif_push/Makefile
	test/filter/Makefile
	test/persistence/Makefile
	test/notif_filter/Makefile
	test/notif_rir/Makefile
	test/notif_indra/Makefile
	test/notif_naming/Makefile
)
